🔨 Add recurrence attribute to create event function

--- a/notebooks/tool.ipynb
+++ b/notebooks/tool.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +120,17 @@
     "        ...,\n",
     "        description=\"The end datetime for the event in 'YYYY-MM-DD HH:MM:SS' format\",\n",
     "    )\n",
+    "    recurrence: Optional[Dict[str, Any]] = Field(\n",
+    "        default=None,\n",
+    "        description=(\"The recurrence of the event.\"\n",
+    "                     \"The format is\"\n",
+    "                     \"{'FREQ': <'DAILY' or 'WEEKLY'>,\"\n",
+    "                     \"'INTERVAL': <number>,\"\n",
+    "                     \"'COUNT': <number or None>,\"\n",
+    "                     \"'UNTIL': <'YYYYMMDD' or None>,\"\n",
+    "                     \"'BYDAY': <'MO', 'TU', 'WE', 'TH', 'FR', 'SA', 'SU' or None>}\"\n",
+    "                     \"Can be used COUNT or UNTIL, but not both, set the other to None.\")\n",
+    "    )\n",
     "    location: Optional[str] = Field(\n",
     "        default=None,\n",
     "        description=\"The location of the event.\"\n",
@@ -136,10 +147,10 @@
     "        default=None,\n",
     "        description=(\"The reminders for the event.\"\n",
     "                     \"If reminders are needed but are not specific, then set to 'True'\"\n",
-    "                     \"If if specified, then set as [{'method': 'email', 'minutes': <minutes>}]\"\n",
+    "                     \"If specified, then set as [{'method': 'email', 'minutes': <minutes>}]\"\n",
     "                     \"Or set as [{'method': 'popup', 'minutes': <minutes>}]\"\n",
-    "                     \"Where <minutes> is the number of minutes before the event, and it may be an operation.\"\n",
-    "                     \"60 * 1 = 1 hour.\"\n",
+    "                     \"Where <minutes> is the number of minutes before the event.\"\n",
+    "                     \"60 minutes = 1 hour.\"\n",
     "                     \"60 * 24 = 1 day.\"\n",
     "                     )\n",
     "    )\n",
@@ -169,6 +180,7 @@
     "        summary: str,\n",
     "        start_datetime: str,\n",
     "        end_datetime: str,\n",
+    "        recurrence: Optional[Dict[str, Any]] = None,\n",
     "        location: Optional[str] = None,\n",
     "        description: Optional[str] = None, \n",
     "        attendees: Optional[List[str]] = None,\n",
@@ -183,8 +195,17 @@
     "            end = date_object.astimezone().replace(microsecond=0).isoformat()\n",
     "        except ValueError:\n",
     "            raise ValueError(\"The datetime format is incorrect. Please use 'YYYY-MM-DD HH:MM:SS' format.\")\n",
-    "\n",
     "        timezone = self.__get_timeZone()\n",
+    "        recurrence_data = None\n",
+    "        if recurrence:\n",
+    "            if isinstance(recurrence, dict):\n",
+    "                recurrence_data = ['RRULE:']\n",
+    "                print(recurrence, \"\\n\\n\\n\")\n",
+    "                for k, v in recurrence.items():\n",
+    "                    if v is not None:\n",
+    "                        recurrence_data.append(f\"{k}={v};\")\n",
+    "                recurrence_data = ''.join(recurrence_data)\n",
+    "\n",
     "        attendees_mails = []\n",
     "        if attendees and isinstance(attendees, list):\n",
     "            for attendee in attendees:\n",
@@ -195,9 +216,7 @@
     "        reminders_info = None\n",
     "        if reminders: \n",
     "            if reminders is True:\n",
-    "                reminders_info = {\n",
-    "                    \"useDefault\": True\n",
-    "                }\n",
+    "                reminders_info = {\"useDefault\": True}\n",
     "            elif isinstance(reminders, list):\n",
     "                for reminder in reminders:\n",
     "                    if 'method' not in reminder or 'minutes' not in reminder:\n",
@@ -208,6 +227,8 @@
     "                    'useDefault': False,\n",
     "                    \"overrides\": reminders \n",
     "                }\n",
+    "        else:\n",
+    "            reminders_info = {\"useDefault\": False}\n",
     "        if conferenceData:\n",
     "            conferenceData = {\n",
     "                \"createRequest\": {\n",
@@ -224,6 +245,7 @@
     "            \"description\": description,\n",
     "            \"start\": {\"dateTime\": start, \"timeZone\": timezone},\n",
     "            \"end\": {\"dateTime\": end, \"timeZone\": timezone},\n",
+    "            \"recurrence\": [recurrence_data], \n",
     "            \"attendees\": attendees_mails, \n",
     "            \"reminders\": reminders_info,\n",
     "            \"conferenceData\": conferenceData\n",
@@ -235,6 +257,7 @@
     "        summary: str,\n",
     "        start_datetime: str,\n",
     "        end_datetime: str,\n",
+    "        recurrence: Optional[Dict[str, Any]] = None,\n",
     "        location: Optional[str] = None,\n",
     "        description: Optional[str] = None,\n",
     "        attendees: Optional[List[str]] = None,\n",
@@ -247,6 +270,7 @@
     "            body = self._prepare_event(summary, \n",
     "                                       start_datetime, \n",
     "                                       end_datetime, \n",
+    "                                       recurrence=recurrence,\n",
     "                                       location=location, \n",
     "                                       description=description, \n",
     "                                       attendees=attendees, \n",
@@ -264,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,16 +356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[CalendarCreateEvent(api_resource=<googleapiclient.discovery.Resource object at 0x13a4546e0>)]"
+       "[CalendarCreateEvent(api_resource=<googleapiclient.discovery.Resource object at 0x124923a70>)]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +406,7 @@
      "output_type": "stream",
      "text": [
       "ContentString: \n",
-      "ToolCalls: [{'name': 'create_calendar_event', 'args': {'summary': 'Reunion con el equipo', 'start_datetime': '2024-12-10 10:00:00', 'end_datetime': '2024-12-10 11:00:00', 'attendees': None}, 'id': 'call_HUt7wjLF6CxECZFrLUtfIe5q', 'type': 'tool_call'}]\n"
+      "ToolCalls: [{'name': 'create_calendar_event', 'args': {'summary': 'Reunion con el equipo', 'start_datetime': '2024-12-10 10:00:00', 'end_datetime': '2024-12-10 11:00:00', 'attendees': None}, 'id': 'call_WRh15gqpXzmpx9W2vlCmE5tJ', 'type': 'tool_call'}]\n"
      ]
     }
    ],
@@ -406,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -426,32 +450,36 @@
      "text": [
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
-      "Crea un evento el 20 de octubre a las 2pm con el titulo 'Reunion con el equipo'. y que me recuerde 10 minutos antes. y por correo dos diasn antes\n",
+      "Crea un evento para el 19 de octubre a las 2pm con el titulo 'Reunion con el equipo'\n",
+      "y que se repita semanalmente hasta el 19 de noviembre.\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  create_calendar_event (call_SppwMl1Eg3vkSNqZuAaGiYoJ)\n",
-      " Call ID: call_SppwMl1Eg3vkSNqZuAaGiYoJ\n",
+      "  create_calendar_event (call_GaVlekPwL1R8xJTrzoZbafn5)\n",
+      " Call ID: call_GaVlekPwL1R8xJTrzoZbafn5\n",
       "  Args:\n",
       "    summary: Reunion con el equipo\n",
-      "    start_datetime: 2024-10-20 14:00:00\n",
-      "    end_datetime: 2024-10-20 15:00:00\n",
+      "    start_datetime: 2024-10-19 14:00:00\n",
+      "    end_datetime: 2024-10-19 15:00:00\n",
+      "    recurrence: {'FREQ': 'WEEKLY', 'UNTIL': '20241119'}\n",
       "    attendees: None\n",
-      "    reminders: [{'method': 'popup', 'minutes': 10}, {'method': 'email', 'minutes': 2880}]\n",
+      "{'FREQ': 'WEEKLY', 'UNTIL': '20241119'} \n",
+      "\n",
+      "\n",
+      "\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
       "Name: create_calendar_event\n",
       "\n",
-      "https://www.google.com/calendar/event?eid=aTU2cTZndDlqYjc2Nm1zNTgxbWZ1bjRkajQgam9yZ2VhbmczM0Bt\n",
+      "https://www.google.com/calendar/event?eid=OTFtcmxhMDhkM2phNW40ZW9oaTAzNG5sbTRfMjAyNDEwMTlUMjAwMDAwWiBqb3JnZWFuZzMzQG0\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "He creado el evento titulado \"Reunión con el equipo\" para el 20 de octubre a las 2:00 PM. Además, te recordaré 10 minutos antes mediante un aviso emergente y recibirás un recordatorio por correo electrónico dos días antes. \n",
-      "\n",
-      "Puedes ver el evento [aquí](https://www.google.com/calendar/event?eid=aTU2cTZndDlqYjc2Nm1zNTgxbWZ1bjRkajQgam9yZ2VhbmczM0Bt).\n"
+      "He creado el evento \"Reunión con el equipo\" para el 19 de octubre a las 2:00 PM, que se repetirá semanalmente hasta el 19 de noviembre. Puedes ver y gestionar el evento [aquí](https://www.google.com/calendar/event?eid=OTFtcmxhMDhkM2phNW40ZW9oaTAzNG5sbTRfMjAyNDEwMTlUMjAwMDAwWiBqb3JnZWFuZzMzQG0).\n"
      ]
     }
    ],
    "source": [
     "# example_query = \"Crea un evento el 20 de octubre a las 12pm con el titulo 'Reunion con el equipo'.\"\n",
-    "example_query = \"Crea un evento el 20 de octubre a las 2pm con el titulo 'Reunion con el equipo'. y que me recuerde 10 minutos antes. y por correo dos diasn antes\"\n",
+    "example_query = \"\"\"Crea un evento para el 19 de octubre a las 2pm con el titulo 'Reunion con el equipo'\n",
+    "y que se repita semanalmente hasta el 19 de noviembre.\"\"\"\n",
     "\n",
     "events = agent_executor.stream(\n",
     "    {\"messages\": [(\"user\", example_query)]},\n",
