🔨 Add CalendarGetEvents tool

--- a/notebooks/tool.ipynb
+++ b/notebooks/tool.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
     "        return datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "\n",
     "class CreateEventSchema(BaseModel):\n",
-    "    \"\"\"Input for CreateEventTool.\"\"\"\n",
+    "    \"\"\"Input for CalendarCreateEvent.\"\"\"\n",
     "\n",
     "    summary: str = Field(\n",
     "        ...,\n",
@@ -288,7 +288,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Get the events in Google Calendar.\"\"\"\n",
+    "\n",
+    "\n",
+    "from datetime import datetime\n",
+    "from typing import Any, Dict, List, Optional, Union, Type\n",
+    "\n",
+    "from langchain_core.callbacks import CallbackManagerForToolRun\n",
+    "\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "from pytz import timezone\n",
+    "\n",
+    "\n",
+    "def get_current_datetime() -> str:\n",
+    "        \"\"\"Get the current datetime.\"\"\"\n",
+    "        return datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "\n",
+    "class GetEventsSchema(BaseModel):\n",
+    "    \"\"\"Input for CalendarGetEvents.\"\"\"\n",
+    "\n",
+    "    min_datetime: Optional[str] = Field(\n",
+    "        default=get_current_datetime(),\n",
+    "        description=(\"The start datetime for the events in 'YYYY-MM-DD HH:MM:SS' format\"\n",
+    "                     \"The current year is 2024\")\n",
+    "    )\n",
+    "    max_datetime: Optional[str] = Field(\n",
+    "        ...,\n",
+    "        description=\"The end datetime for the events in 'YYYY-MM-DD HH:MM:SS' format\",\n",
+    "    )\n",
+    "    max_results: int = Field(\n",
+    "        default=10,\n",
+    "        description=\"The maximum number of results to return.\"\n",
+    "    )\n",
+    "    \n",
+    "\n",
+    "class CalendarGetEvents(GoogleCalendarBaseTool):\n",
+    "    \"\"\"Tool that get the events in Google Calendar.\"\"\"\n",
+    "    name: str = \"get_calendar_events\"\n",
+    "    description: str = \"Use this tool to list the events in the calendar.\"\n",
+    "    args_schema: Type[GetEventsSchema] = GetEventsSchema\n",
+    "\n",
+    "\n",
+    "    def __get_calendars_info(self) -> List[Any]:\n",
+    "        \"\"\"Get the calendars info.\"\"\"\n",
+    "        calendars = self.api_resource.calendarList().list().execute()\n",
+    "        return calendars['items']\n",
+    "    \n",
+    "    def __get_calendar_timezone(self, calendars_info: List, calendar_id: str) -> Optional[str]:\n",
+    "        \"\"\"Get the timezone of the current calendar.\"\"\"\n",
+    "        for cal in calendars_info:\n",
+    "            if cal['id'] == calendar_id:\n",
+    "                return cal['timeZone']\n",
+    "        return None\n",
+    "\n",
+    "    def __get_calendars(self, calendars_info: List) -> List[str]:\n",
+    "        \"\"\"Get the calendars IDs.\"\"\"\n",
+    "        calendars = []\n",
+    "        for cal in calendars_info:\n",
+    "            if cal.get('selected', None):\n",
+    "                calendars.append(cal['id'])\n",
+    "        return calendars\n",
+    "    \n",
+    "    def _process_events(self, events_data: List[Dict[str, Any]]) -> List[Dict[str, str]]:\n",
+    "        \"\"\"Process the events data.\"\"\"\n",
+    "        simplified_data = []\n",
+    "        for data in events_data:\n",
+    "            # Extract relevant fields\n",
+    "            event_dict = {\n",
+    "            \"id\": data[\"id\"],\n",
+    "            \"htmlLink\": data[\"htmlLink\"],\n",
+    "            \"summary\": data[\"summary\"],\n",
+    "            \"creator\": data[\"creator\"][\"email\"],\n",
+    "            \"organizer\": data[\"organizer\"][\"email\"],\n",
+    "            \"start\": data[\"start\"][\"dateTime\"],\n",
+    "            \"end\": data[\"end\"][\"dateTime\"],\n",
+    "            }\n",
+    "            simplified_data.append(event_dict)\n",
+    "        return simplified_data\n",
+    "    \n",
+    "    def _run(\n",
+    "        self,\n",
+    "        min_datetime: Optional[str],\n",
+    "        max_datetime: Optional[str] = None,\n",
+    "        max_results: int = 10,\n",
+    "        run_manager: Optional[CallbackManagerForToolRun] = None\n",
+    "    ) -> List[Dict[str, str]]:\n",
+    "        \"\"\"Run the tool.\"\"\"\n",
+    "        try:\n",
+    "            # body_request = self._prepare_request(min_datetime, max_datetime, max_results)\n",
+    "            calendars_info = self.__get_calendars_info()\n",
+    "            calendars = self.__get_calendars(calendars_info)\n",
+    "            events = []\n",
+    "            timeMin = None\n",
+    "            timeMax = None\n",
+    "            for calendar in calendars:\n",
+    "                region_tz = timezone(self.__get_calendar_timezone(calendars_info, calendar))\n",
+    "                if min_datetime:\n",
+    "                    timeMin = region_tz.localize(datetime.strptime(min_datetime, \"%Y-%m-%d %H:%M:%S\")).isoformat()\n",
+    "                if max_datetime:\n",
+    "                    timeMax = region_tz.localize(datetime.strptime(max_datetime, \"%Y-%m-%d %H:%M:%S\")).isoformat()\n",
+    "                events_result = self.api_resource.events().list(\n",
+    "                    calendarId=calendar, \n",
+    "                    timeMin=timeMin, \n",
+    "                    timeMax=timeMax, \n",
+    "                    maxResults=max_results, \n",
+    "                    singleEvents=True, \n",
+    "                    orderBy=\"startTime\"\n",
+    "                ).execute()\n",
+    "                cal_events = events_result.get('items', [])\n",
+    "                events.extend(cal_events)\n",
+    "            return self._process_events(events)\n",
+    "        except Exception as error:\n",
+    "            raise Exception(f\"An error occurred: {error}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,12 +449,13 @@
     "        \"\"\"Get the tools in the toolkit.\"\"\"\n",
     "        return [\n",
     "            CalendarCreateEvent(api_resource=self.api_resource),\n",
+    "            CalendarGetEvents(api_resource=self.api_resource)\n",
     "        ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,16 +478,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[CalendarCreateEvent(api_resource=<googleapiclient.discovery.Resource object at 0x124923a70>)]"
+       "[CalendarCreateEvent(api_resource=<googleapiclient.discovery.Resource object at 0x125886810>),\n",
+       " CalendarGetEvents(api_resource=<googleapiclient.discovery.Resource object at 0x125886810>)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -406,14 +529,14 @@
      "output_type": "stream",
      "text": [
       "ContentString: \n",
-      "ToolCalls: [{'name': 'create_calendar_event', 'args': {'summary': 'Reunion con el equipo', 'start_datetime': '2024-12-10 10:00:00', 'end_datetime': '2024-12-10 11:00:00', 'attendees': None}, 'id': 'call_WRh15gqpXzmpx9W2vlCmE5tJ', 'type': 'tool_call'}]\n"
+      "ToolCalls: [{'name': 'get_calendar_events', 'args': {'min_datetime': '2024-10-19 00:00:00', 'max_datetime': '2024-10-19 23:59:59'}, 'id': 'call_EEdw2xijXbXEoTUPuU43Ij7D', 'type': 'tool_call'}]\n"
      ]
     }
    ],
    "source": [
     "from langchain_core.messages import HumanMessage\n",
     "\n",
-    "prompt = \"Create a event in Google Calendar para el 10 de diciembre a las 10:00am con el titulo 'Reunion con el equipo'.\"\n",
+    "prompt = \"Cuales son mis eventos de hoy?\"\n",
     "\n",
     "response = model_with_tools.invoke([HumanMessage(content=prompt)])\n",
     "\n",
@@ -430,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -450,43 +573,43 @@
      "text": [
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
-      "Crea un evento para el 19 de octubre a las 2pm con el titulo 'Reunion con el equipo'\n",
-      "y que se repita semanalmente hasta el 19 de noviembre.\n",
+      "Cuales son mis eventos de hoy?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  create_calendar_event (call_GaVlekPwL1R8xJTrzoZbafn5)\n",
-      " Call ID: call_GaVlekPwL1R8xJTrzoZbafn5\n",
+      "  get_calendar_events (call_IKdYdngFprJ96sbTYeCqS7qz)\n",
+      " Call ID: call_IKdYdngFprJ96sbTYeCqS7qz\n",
       "  Args:\n",
-      "    summary: Reunion con el equipo\n",
-      "    start_datetime: 2024-10-19 14:00:00\n",
-      "    end_datetime: 2024-10-19 15:00:00\n",
-      "    recurrence: {'FREQ': 'WEEKLY', 'UNTIL': '20241119'}\n",
-      "    attendees: None\n",
-      "{'FREQ': 'WEEKLY', 'UNTIL': '20241119'} \n",
-      "\n",
-      "\n",
-      "\n",
+      "    min_datetime: 2024-10-19 00:00:00\n",
+      "    max_datetime: 2024-10-19 23:59:59\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: create_calendar_event\n",
+      "Name: get_calendar_events\n",
       "\n",
-      "https://www.google.com/calendar/event?eid=OTFtcmxhMDhkM2phNW40ZW9oaTAzNG5sbTRfMjAyNDEwMTlUMjAwMDAwWiBqb3JnZWFuZzMzQG0\n",
+      "[{\"id\": \"3r391n18c82ii2ifobqp7dgci2\", \"htmlLink\": \"https://www.google.com/calendar/event?eid=M3IzOTFuMThjODJpaTJpZm9icXA3ZGdjaTIgam9yZ2VhbmczM0Bt\", \"summary\": \"Juliancito\", \"creator\": \"jorgeang33@gmail.com\", \"organizer\": \"jorgeang33@gmail.com\", \"start\": \"2024-10-19T19:00:00-06:00\", \"end\": \"2024-10-19T21:00:00-06:00\"}, {\"id\": \"4vacrsb22fccemeker6lrjv95p\", \"htmlLink\": \"https://www.google.com/calendar/event?eid=NHZhY3JzYjIyZmNjZW1la2VyNmxyanY5NXAgc3RkZXZlbG9wZXJzeWVsbGluZ0Bt\", \"summary\": \"Otro calendario\", \"creator\": \"jorgeang33@gmail.com\", \"organizer\": \"stdevelopersyelling@gmail.com\", \"start\": \"2024-10-19T22:00:00-06:00\", \"end\": \"2024-10-19T23:00:00-06:00\"}]\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "He creado el evento \"Reunión con el equipo\" para el 19 de octubre a las 2:00 PM, que se repetirá semanalmente hasta el 19 de noviembre. Puedes ver y gestionar el evento [aquí](https://www.google.com/calendar/event?eid=OTFtcmxhMDhkM2phNW40ZW9oaTAzNG5sbTRfMjAyNDEwMTlUMjAwMDAwWiBqb3JnZWFuZzMzQG0).\n"
+      "Tienes los siguientes eventos programados para hoy, 19 de octubre de 2024:\n",
+      "\n",
+      "1. **Juliancito**\n",
+      "   - **Hora:** 19:00 - 21:00\n",
+      "   - [Detalles del evento](https://www.google.com/calendar/event?eid=M3IzOTFuMThjODJpaTJpZm9icXA3ZGdjaTIgam9yZWFuZzMwQG0)\n",
+      "\n",
+      "2. **Otro calendario**\n",
+      "   - **Hora:** 22:00 - 23:00\n",
+      "   - [Detalles del evento](https://www.google.com/calendar/event?eid=NHZhY3JzYjIyZmNjZW1la2VyNmxyanY5NXAgc3RkZXZlbG9wZXJzeWVsbGluZ0Bt)\n",
+      "\n",
+      "Si necesitas más información o deseas realizar alguna acción con estos eventos, házmelo saber.\n"
      ]
     }
    ],
    "source": [
-    "# example_query = \"Crea un evento el 20 de octubre a las 12pm con el titulo 'Reunion con el equipo'.\"\n",
-    "example_query = \"\"\"Crea un evento para el 19 de octubre a las 2pm con el titulo 'Reunion con el equipo'\n",
-    "y que se repita semanalmente hasta el 19 de noviembre.\"\"\"\n",
+    "example_query = \"\"\"Cuales son mis eventos de hoy?\"\"\"\n",
     "\n",
     "events = agent_executor.stream(\n",
     "    {\"messages\": [(\"user\", example_query)]},\n",
     "    stream_mode=\"values\",\n",
     ")\n",
-    "for event in events:\n",
-    "    event[\"messages\"][-1].pretty_print()"
+    "for data in events:\n",
+    "    data[\"messages\"][-1].pretty_print()"
    ]
   }
  ],
